--- a/dotnetfeatures/dotnetfeatures.csproj
+++ b/dotnetfeatures/dotnetfeatures.csproj
@@ -1,16 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
- <PropertyGroup>
- <TargetFramework>net10.0</TargetFramework>
- <Nullable>enable</Nullable>
- <ImplicitUsings>enable</ImplicitUsings>
- <BlazorDisableThrowNavigationException>true</BlazorDisableThrowNavigationException>
- </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net10.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<BlazorDisableThrowNavigationException>true</BlazorDisableThrowNavigationException>
+	</PropertyGroup>
 
- <ItemGroup>
- <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
- <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
- <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="10.0.0-rc.2.25502.107" />
- </ItemGroup>
+	<ItemGroup>
+		<!-- Needed for interactive WebAssembly render mode endpoints/services -->
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
+		<!-- (Optional) core WebAssembly client packages; can be removed if unused -->
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="10.0.0-rc.2.25502.107" />
+	</ItemGroup>
 
 </Project>
