--- a/csharp14/csharp14.csproj
+++ b/csharp14/csharp14.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<!--<LangVersion>13.0</LangVersion>-->
   </PropertyGroup>
 
 </Project>
