Enhance .NET projects and add installation script
Updated TestProject.csproj with new properties and xUnit
references. Removed redundant using directive in UnitTest1.cs.
Modified global.json to remove test runner config.
Uncommented and corrected BenchmarkDotNet code in Program.cs.
Fixed Assert.AreEqual call in 4-spanOverloads.cs. Corrected
typo and added methods in 5-ExtensionBlocks.cs. Reformatted
csharp14.csproj. Updated Weather.razor for persistent state.
Added app.cs and app.csproj using Humanizer. Introduced
dotnet-install.sh for .NET SDK/runtime installation. Added
testingproject with xUnit setup and configuration.

--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -1,33 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<TargetFramework>net10.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+
+		<!-- xUnit v3 template uses an exe test host -->
 		<OutputType>Exe</OutputType>
 		<RootNamespace>TestProject</RootNamespace>
 		<LangVersion>Preview</LangVersion>
-		<TargetFramework>net10.0</TargetFramework>
+
+		<IsTestProject>true</IsTestProject>
+		<TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
 		<UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
-		<!--
-    This template uses native xUnit.net command line options when using 'dotnet run' and
-    VSTest by default when using 'dotnet test'. For more information on how to enable support
-    for Microsoft Testing Platform, please visit:
-      https://xunit.net/docs/getting-started/v3/microsoft-testing-platform
-    -->
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+		<PackageReference Include="xunit.v3.assert" Version="3.2.0" />
+		<PackageReference Include="xunit.v3.core.mtp-v2" Version="3.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<Using Include="Xunit" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="xunit.v3.core.mtp-v2" Version="3.2.0" />
-		<PackageReference Include="xunit.v3" Version="3.2.0" />
-
 	</ItemGroup>
 
 </Project>
